static/css/s2.css
/* ... */
.toggleOption:first-child {
    border-top-left-radius: 4px;
    border-bottom-left-radius: 4px;
}
.toggleOption:last-child {
    border-top-right-radius: 4px;
    border-bottom-right-radius: 4px;
    border-right: 1px solid #999;
}
.toggleOption.on, .toggleOption:hover {
  background-color: #eee;
}
.toggleSet.separated .toggleOption {
  margin-right: 3%;
  border-right: 1px solid #999;
}
.toggleSet.separated .toggleOption:last-child {
  margin-right: 0;
}
.color .toggleOption {
  border-radius: 5px;
  height: 38px;
}
.color .toggleOption.on {
  border-color: black;
}
.color .light, .color .light.on {
  background-color: white;
}
.color .sepia, .color .sepia.on {
  background-color: #f7f7f7;
}
.color .dark, .color .dark.on {
  background-color: #333331;
}
.toggleOption {
  font-size: 26px;
  line-height: 34px;
  vertical-align: middle;
}
.toggleSet .toggleOption .he,
.toggleSet .toggleOption .en {
  display: inline;
}
.toggleOption.bilingual {
  font-size: 18px;
}
.toggleOption.segmented, .toggleOption.continuous {
  font-size: 18px;
}
.toggleOption.smaller, .toggleOption.larger {
  font-family: "proxima-nova", "Helvetica Neue", "Helvetica", sans-serif;
}
.toggleOption.smaller {
  font-size: 12px;
}
.toggleOption.larger {
  font-size: 22px;
}
.readerOptionsPanel .line {
  margin: 20px 0;
  border-top: 1px solid #ddd;
}
.mask {
  position: absolute;
  top: 0;
  width: 100%;
  height: 100%;
  z-index: 102;
  cursor: pointer;
}
.textRange, .noteText {
  -moz-user-select: text;
  -khtml-user-select: text;
  -webkit-user-select: text;
  -o-user-select: text;
}
.textRange.basetext {
  width: 100%;
  box-sizing: border-box;
  font-size: 1.8em;
  line-height: 1.6;
  text-align: justify;
  background-color: inherit;
  margin: 0 auto;
  max-width: 700px;
  position: relative;
  padding: 0 30px;
}
.singlePanel .textRange.basetext {
  padding: 0;
}
.narrowColumn .textRange.basetext {
}
.textRange.basetext .title {
  padding: 24px 28px 24px;
  color: #999;
  text-align: center;
  font-weight: lighter;
  font-family: "proxima-nova", "Helvetica Neue", "Helvetica", sans-serif;
  text-transform: uppercase;
  letter-spacing: 1px;
}
.dark .textRange.basetext .title {
  color: #ccc;
}
.textRange.basetext .title .titleBox {
  display: inline-block;
  border-bottom: 4px solid #E6E5E6;
  padding: 0 6px 3px;
}  
.dark .textRange.basetext .title .titleBox {
  border-bottom: 4px solid #666;
}  
.bilingual .textRange.basetext .title .he {
  display: none;
}
.interface-hebrew .readerPanel.english .textRange,
.interface-hebrew .readerPanel.english .categoryFilterGroup,
.interface-hebrew .readerPanel.bilingual .categoryFilterGroup,
.interface-hebrew .readerPanel.english .tocContent,
.interface-hebrew .readerPanel.bilingual .tocContent,
.interface-hebrew .readerPanel.english .dlVersionSelect,
.interface-hebrew .readerPanel.bilingual .dlVersionSelect,
.interface-hebrew .readerPanel.hebrew .dlVersionSelect
{
  direction: ltr;
}
.interface-english .readerPanel.hebrew .textRange,
.interface-english .readerPanel.hebrew .categoryFilterGroup,
.interface-english .readerPanel.hebrew .tocContent{
  direction: rtl;
}
.basetext .text {
  padding: 30px 44px;
  background-color: inherit;
}
.narrowColumn .basetext .text {
  padding: 26px;
}
.singlePanel .basetext .text {
  padding: 30px 34px;
}
.basetext .segment {
  cursor: pointer;
  display: block;
  background-color: inherit;
  margin-bottom: 26px;
}
.continuous .basetext .segment {
  display: inline;
  margin: 0;
  padding: .3333em 0;
}
.continuous.bilingual .basetext .segment,
.segmented.bilingual .basetext .segment {
  margin-bottom: 14px;
  display: block;
}
.bilingual .segment > .he,
.bilingual .segment > .en { 
  display: block;
}
.bilingual .segment > .en { 
  margin-top: 6px;
  text-align: left;
}
.bilingual .basetext .segment > .en {
  margin: 10px 0 20px;
  color: #666;
}
.continuous.bilingual .segment.heOnly > .he,
.continuous.bilingual .segment.enOnly > .en {
  display: inline;
}
.basetext .segment:active,
.basetext .segment:focus {
  background-color: #f4f4f4;
}
.basetext .segment:active .segmentNumber,
.basetext .segment:focus .segmentNumber,
.basetext .segment:active .linkCount,
.basetext .segment:focus .linkCount {
  background-color: transparent;
}
.textColumn.connectionsOpen .basetext .segment:active,
.textColumn.connectionsOpen .basetext .segment:focus {
  background-color: inherit;
}
.dark .basetext .segment:active,
.dark .basetext .segment:focus {
  background-color: #444;
}
.basetext .segment.highlight {
  background-color: #E9E9E7;
}
.basetext .segment.highlight .segmentNumber,
.basetext .segment.highlight .linkCount {
  background-color: transparent;
}
.sepia .basetext .segment.highlight {
  background-color: #E3E3E1;
}
.dark .basetext .segment.highlight {
  background-color: #444;
}
.textRange {
  line-height: 1.4;
  font-size: 1.6em; 
}
.textRange .textInner {
  position: relative;
}
.textRange.lowlight .text {
  color: #999;
}
.segment {
}
.segment.heOnly {
  text-align: right;
}
.segment.enOnly {
  text-align: left;
}
.segment.heOnly .en {
  display: none;
}
.segment.enOnly .he {
  display: none;
}
.segment .segmentNumber,
.segment .linkCount,
.textRange .numberLabel {
  position: absolute;
  background-color: inherit;
  font-weight: lighter;
  color: #ccc;
  display: block;
  width: 8px;
  text-align: center;
  -webkit-text-size-adjust: 100%;
  -moz-user-select: none;
  -khtml-user-select: none;
  -webkit-user-select: none;
  -o-user-select: none;
}
.segmentNumber .segmentNumberInner,
.linkCount .linkCountDot {
  display: inline-block;
}
.bilingual .segmentNumber .segmentNumberInner,
.bilingual .linkCount .linkCountDot,
.bilingual .numberLabel .numberLabelInner {
  margin-top: 0;
}
.bilingual .segmentNumber .he,
.bilingual .linkCount .he,
.bilingual .numberLabel .he {
  display: none;
}
.segment .segmentNumber,
.segment .linkCount {
  display: none;
  line-height: 1.6;
}
/* ... */

